[gd_scene load_steps=9 format=2]

[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/curses/vamp_curse_icon.png" type="Texture" id=2]
[ext_resource path="res://GameWorld.gd" type="Script" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]
[ext_resource path="res://images/curses/weakness_curse_icon.png" type="Texture" id=5]
[ext_resource path="res://images/curses/slow_shoot_icon.png" type="Texture" id=6]
[ext_resource path="res://images/curses/slow_move_icon.png" type="Texture" id=7]
[ext_resource path="res://images/curses/miss_chance_icon.png" type="Texture" id=8]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 3 )

[node name="Tiles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Pickups" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="BreakCheck" type="Timer" parent="."]
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )
health_degen_icon = ExtResource( 2 )
slow_movement_icon = ExtResource( 7 )
slow_shooting_icon = ExtResource( 6 )
miss_chance_icon = ExtResource( 8 )
enemy_damage_icon = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer"]
margin_right = 640.0
margin_bottom = 28.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="GUI/VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 22.0
margin_bottom = 16.0
text = "HP:"

[node name="HealthBar" type="ProgressBar" parent="GUI/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 26.0
margin_right = 226.0
margin_bottom = 18.0
rect_min_size = Vector2( 200, 18 )
value = 10.0
percent_visible = false

[node name="HealthText" type="Label" parent="GUI/VBoxContainer/MarginContainer/HBoxContainer/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "100/100"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="GUI/VBoxContainer"]
margin_top = 32.0
margin_right = 640.0
margin_bottom = 38.0
custom_constants/margin_right = 10
custom_constants/margin_top = 3
custom_constants/margin_left = 40
custom_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer/MarginContainer2"]
margin_left = 40.0
margin_top = 3.0
margin_right = 630.0
margin_bottom = 3.0

[node name="Curse1" type="TextureRect" parent="GUI/VBoxContainer/MarginContainer2/HBoxContainer"]

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 4.0
margin_right = 4.0

[node name="Curse2" type="TextureRect" parent="GUI/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 8.0
margin_right = 8.0

[node name="MarginContainer2" type="MarginContainer" parent="GUI/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 12.0
margin_right = 12.0

[node name="Curse3" type="TextureRect" parent="GUI/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 16.0
margin_right = 16.0

[node name="PauseMenu" parent="GUI" instance=ExtResource( 1 )]

[node name="CurseTooltip" type="Label" parent="GUI"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="timeout" from="BreakCheck" to="." method="_on_BreakCheck_timeout"]
